--- a/views/media.pug
+++ b/views/media.pug
@@ -301,7 +301,7 @@ block content
                                                         a.delete-comment-button(style="margin-left:9px;cursor:pointer;" commentId=comment._id) Delete
 
                                                     if isUploaderOrAdmin
-                                                        a.block-user-button(style="margin-left:9px;cursor:pointer;" commentId=comment._id) Block User
+                                                        a.block-user-button(style="margin-left:9px;cursor:pointer;" blockedusername=comment.commenter.channelUrl) Block User
 
 
                                             p(style="text-align:left;") #{comment.text}
