--- a/views/mediaPlayerPartials/deleteCommentJs.pug
+++ b/views/mediaPlayerPartials/deleteCommentJs.pug
@@ -60,36 +60,34 @@ script.
       })
     })
 
-    function blockUser(blockingUserName, blockedUserName) {
-
-      var upload = '#{upload._id}';
+    function blockUser(blockedUsername) {
 
       var csrf = '#{_csrf}'
 
+      const blockingUsername = '#{user.channelUrl}'
+
+      $()
+
       var data = {
         _csrf: csrf,
-        upload,
-        commentId,
-        uniqueTag: mediaUniqueTag
+        blockingUsername,
+        blockedUsername
       }
 
       $.ajax({
         type: 'POST',
-        url: `/api/comment/delete`,
+        url: `/api/user/block`,
         data,
         success: function (data) {
 
-          swal('Comment deleted!');
-
-          commentThread.hide();
-
+          swal('User was blocked successfully');
 
           // remove comment
           console.log(data);
         },
         error: function (err) {
 
-          swal('Unable to delete comment please contact administrator')
+          swal('Unable to block user please contact administrator')
           console.log(err);
         }
       });
@@ -98,25 +96,22 @@ script.
 
     $('.block-user-button').on('touchstart click', function (e) {
 
-      // GET USER
-      // POST TO USER
-      //
-
-      var blockedUserName = '';
-      var blockingUserName = '';
-
       // dont move browser
       e.preventDefault();
 
+      var blockedUsername = $(this).attr('blockedusername');
+
+      console.log(blockedUsername + ' blocked')
+
       swal({
         title: "Block User",
-        text: `Are you sure you want to block user ${username}? They will no longer be able to comment on your content`,
+        text: `Are you sure you want to block user ${blockedUsername}? They will no longer be able to comment on your content`,
         type: 'warning',
         showCancelButton: true,
         confirmButtonText: 'Block User'
       }).then(function (result) {
         if (result.value) {
-          blockUser(blockingUserName, blockedUserName)
+          blockUser(blockedUsername)
         } else {
           swal.close();
         }
