--- a/views/media.pug
+++ b/views/media.pug
@@ -295,15 +295,17 @@ block content
                                                 p(style="text-align:left;display:inline-block;")
                                                     a(href=`/user/${comment.commenter.channelUrl}` style="color:black;margin-right:5px;") #{comment.commenter.channelName || comment.commenter.channelUrl}
                                                 p(style="display:inline-block;") - #{comment.timeAgo} &nbsp
-                                                    if !viewingUserIsBlocked
+                                                    if user && !viewingUserIsBlocked
                                                         a.reply-link(style="cursor:pointer") Reply
                                                     // delete button
                                                     // if uploader or admin or commenter, let them delete comment
-                                                    if isUploaderOrAdmin || ( comment.commenter._id == user._id )
+                                                    if isUploaderOrAdmin || ( user && comment.commenter._id == user._id )
                                                         a.delete-comment-button(style="margin-left:9px;cursor:pointer;" commentId=comment._id) Delete
 
                                                     if isUploaderOrAdmin && !viewingUserIsBlocked
                                                         a.block-user-button(style="margin-left:9px;cursor:pointer;" blockedusername=comment.commenter.channelUrl) Block User
+                                                    if isUploaderOrAdmin && viewingUserIsBlocked
+                                                        a.unblock-user-button(style="margin-left:9px;cursor:pointer;" blockedusername=comment.commenter.channelUrl) Unblock User
 
 
                                             p(style="text-align:left;") #{comment.text}
@@ -363,7 +365,8 @@ block content
 
     include mediaPlayerPartials/creditFunctionalityJs
 
-    include mediaPlayerPartials/deleteCommentJs
+    if user
+        include mediaPlayerPartials/deleteCommentAndBlockUnblockUserJs
 
     include mediaPlayerPartials/subscribeFunctionalityJs
 
