--- a/views/media.pug
+++ b/views/media.pug
@@ -302,9 +302,9 @@ block content
                                                     if isUploaderOrAdmin || ( user && comment.commenter._id == user._id )
                                                         a.delete-comment-button(style="margin-left:9px;cursor:pointer;" commentId=comment._id) Delete
 
-                                                    if isUploaderOrAdmin && !viewingUserIsBlocked
+                                                    if isUploader && !comment.commenter.isBlocked
                                                         a.block-user-button(style="margin-left:9px;cursor:pointer;" blockedusername=comment.commenter.channelUrl) Block User
-                                                    if isUploaderOrAdmin && viewingUserIsBlocked
+                                                    if isUploader && comment.commenter.isBlocked
                                                         a.unblock-user-button(style="margin-left:9px;cursor:pointer;" blockedusername=comment.commenter.channelUrl) Unblock User
 
 
