--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -301,8 +301,20 @@ block content
           i.fa.fa-pencil
           | Delete
 
-  br
-  br
+
+  h3.text-center Save Email
+    br
+  form.form-horizontal(action='/account/email', method='POST')
+    input(type='hidden', name='_csrf', value=_csrf)
+    .form-group
+      label.col-sm-3.control-label(for='email') Email Address
+      .col-sm-7
+        input.form-control(type='email', name='email', id='email')
+    .form-group
+      .col-sm-offset-3.col-sm-4
+        button.btn.btn-primary(type='submit')
+          i.fa.fa-envelope
+          | Save Email
   br
   h3.text-center Change Password
   br
@@ -322,8 +334,6 @@ block content
         button.btn.btn-primary(type='submit')
           i.fa.fa-lock
           | Change Password
-
-
 
   script.
 
