allow alphabetical sort

--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -139,6 +139,8 @@ block content
                     a(href=`/user/${channel.channelUrl}?orderBy=newToOld`) New To Old
                 li
                     a(href=`/user/${channel.channelUrl}?orderBy=oldToNew`) Old To New
+                li
+                    a(href=`/user/${channel.channelUrl}?orderBy=alphabetical`) Alphabetical
 
         include ../viewPartials/sensitivityFilterDropdown
 
